FE handle comments and refactor BE APIs

--- a/CRM-Update-Final-Project-FE/src/app/pages/components/profile/profile.component.html
+++ b/CRM-Update-Final-Project-FE/src/app/pages/components/profile/profile.component.html
@@ -198,17 +198,17 @@
                     <div class="card-body">
                         <form [formGroup]="form">
                             <mat-form-field class="form-group">
-                                <mat-label>Password</mat-label>
+                                <mat-label class="col-sm-2 col-form-label">Password</mat-label>
                                 <input matInput placeholder="Your password" class="form-control"
                                        formControlName="oldPassword">
                             </mat-form-field>
                             <mat-form-field class="form-group">
-                                <mat-label>New Password</mat-label>
+                                <mat-label class="col-sm-2 col-form-label">New Password</mat-label>
                                 <input matInput placeholder="Your new password" class="form-control"
                                        formControlName="newPassword">
                             </mat-form-field>
                             <mat-form-field class="form-group">
-                                <mat-label>Confirm New Password</mat-label>
+                                <mat-label class="col-sm-2 col-form-label">Confirm New Password</mat-label>
                                 <input matInput placeholder="Repeat your new password" class="form-control"
                                        formControlName="newPasswordConfirmed">
                             </mat-form-field>
