--- a/CRM-Update-Final-Project-FE/src/app/pages/components/task/task.component.html
+++ b/CRM-Update-Final-Project-FE/src/app/pages/components/task/task.component.html
@@ -90,37 +90,43 @@
                             <input matInput placeholder="By keyword" (keyup)="filterByKeyword($event)">
                         </mat-form-field>
                         <table mat-table matSort [dataSource]="dataSource" class="mat-elevation-z8">
-                            <ng-container matColumnDef="avatar">
-                                <th mat-header-cell *matHeaderCellDef class="fs-6 fst-italic">Avatar</th>
-                                <td mat-cell *matCellDef="let element">
-                                    <img *ngIf="element.symbol == null"
-                                         src="/assets/img/project-symbols/default1.png" width="50" height="50">
-                                    <img *ngIf="element.symbol != null" [src]="element.symbol" width="50" height="50">
-                                </td>
-                            </ng-container>
                             <ng-container matColumnDef="name">
-                                <th mat-sort-header mat-header-cell *matHeaderCellDef class="fs-6 fst-italic"> Name</th>
+                                <th mat-sort-header mat-header-cell *matHeaderCellDef class="fs-6 fst-italic"> <strong>Name</strong></th>
                                 <td mat-cell *matCellDef="let element"> {{element.name}} </td>
                             </ng-container>
                             <ng-container matColumnDef="projectName">
-                                <th mat-sort-header mat-header-cell *matHeaderCellDef class="fs-6 fst-italic">
-                                    Project
+                                <th mat-sort-header mat-header-cell *matHeaderCellDef class="fs-6 fst-italic"><strong>Project</strong>
                                 </th>
                                 <td mat-cell *matCellDef="let element"> {{element.projectName}} </td>
                             </ng-container>
                             <ng-container matColumnDef="status">
-                                <th mat-sort-header mat-header-cell *matHeaderCellDef class="fs-6 fst-italic"> Status
+                                <th mat-sort-header mat-header-cell *matHeaderCellDef class="fs-6 fst-italic"> <strong>Status</strong>
                                 </th>
-                                <td mat-cell *matCellDef="let element"> {{element.status}} </td>
+                                <td mat-cell *matCellDef="let element"> 
+                                    <span *ngIf="element.status == 'UNASSIGNED'" class="badge bg-label-info me-1">{{element.status}} </span>
+                                    <span *ngIf="element.status == 'STARTED'" class="badge bg-label-primary me-1">{{element.status}} </span>
+                                    <span *ngIf="element.status == 'COMPLETED'" class="badge bg-label-success me-1">{{element.status}} </span>
+                                </td>
                             </ng-container>
                             <ng-container matColumnDef="action">
-                                <th mat-header-cell *matHeaderCellDef class="fs-6 fst-italic"> Action</th>
+                                <th mat-header-cell *matHeaderCellDef class="fs-6 fst-italic"> <strong>Action</strong></th>
                                 <td mat-cell *matCellDef="let element">
-                                    <button mat-raised-button color="primary" (click)="updateTask(element)">Update
-                                    </button>
-                                    |
-                                    <button mat-raised-button color="warn" (click)="deleteTask(element.id)">Delete
-                                    </button>
+                                    <div class="dropdown">
+                                        <button type="button" class="btn p-0 dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
+                                            <i class="bx bx-dots-vertical-rounded"></i>
+                                        </button>
+                                        <div class="dropdown-menu">
+                                            <button class="dropdown-item" 
+                                                (click)="updateTask(element)"><i class="bx bx-edit-alt me-1 bx-tada-hover"></i> Update</button
+                                            >
+                                            <button class="dropdown-item"
+                                                (click)="deleteTask(element.id)"><i class="bx bx-trash me-1 bx-tada-hover"></i> Delete</button
+                                            >
+                                            <button class="dropdown-item"
+                                                (click)="commentTask(element)"><i class='bx bxs-comment-detail bx-tada-hover'></i> Comment</button
+                                            >
+                                        </div>
+                                    </div>
                                 </td>
                             </ng-container>
                             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
