--- a/CRM-Update-Final-Project-FE/src/app/share/components/dialog-form/dialog-form.component.html
+++ b/CRM-Update-Final-Project-FE/src/app/share/components/dialog-form/dialog-form.component.html
@@ -226,8 +226,82 @@
     </div>
     </div>
     </div>
-    <!-- END USER COMMENT
-    <-------------------------------END COMMENT FORM-------------------------------------->
+    <!-- END USER COMMENT -->
+    <!-------------------------------END COMMENT FORM-------------------------------------->
+    <!-----------------------------START ADD STAFF TO PROJECT FORM------------------------->
+
+    <div *ngIf="type == appSettings.TYPE_MANAGE_STAFF_IN_PROJECT">
+        <!-- START PROJECT INFO -->
+        <button type="button" class="btn btn-info" 
+        [disabled]="title == appSettings.TITLE_CURRENT_STAFF"
+        (click)="toRemoveStaffFromProjectTable()"
+        > CURRENT STAFFS </button>
+        &nbsp;
+        <button type="button" class="btn btn-primary" 
+        [disabled]="title == appSettings.TITLE_AVAILABLE_STAFF"
+        (click)="toAddStaffToProjectTable()"
+        > AVAILABLE STAFFS </button>
+        <div>
+            Project: {{projectData.name}}
+        </div>
+        <div>
+            Leader: {{projectData.leaderUsername}}
+        </div>
+        <!-- END PROJECT INFO -->
+        <!-- START STAFFS IN PROJECT TABLE -->
+    
+        <div class="card">
+            <div class="card-body">
+            <mat-form-field>
+                <mat-label>Search..?</mat-label>
+                <input matInput placeholder="By keyword" (keyup)="filterByKeyword($event)">
+            </mat-form-field>
+            <table mat-table matSort [dataSource]="dataSource" class="mat-elevation-z8">
+                <ng-container matColumnDef="hobbies">
+                    <th mat-sort-header mat-header-cell *matHeaderCellDef class="fs-6 fst-italic"> <strong>First Name</strong>
+                    </th>
+                    <td mat-cell *matCellDef="let element">
+                        <img *ngIf="element.avatar == null && element.gender == 'MALE'"
+                             src="/assets/img/avatars/male-default.png" width="50" height="50" alt="">
+                        <img *ngIf="element.avatar == null && element.gender == 'FEMALE'"
+                             src="/assets/img/avatars/female-default.png" width="50" height="50" alt="">
+                        <img *ngIf="element.avatar != null" [src]="element.avatar" width="50" height="50" alt="">
+                        {{element.gender}} 
+                    </td>
+                </ng-container>
+                <ng-container matColumnDef="username">
+                    <th mat-sort-header mat-header-cell *matHeaderCellDef class="fs-6 fst-italic"> <strong>Username</strong>
+                    </th>
+                    <td mat-cell *matCellDef="let element"> {{element.username}} </td>
+                </ng-container>
+                <ng-container matColumnDef="email">
+                    <th mat-sort-header mat-header-cell *matHeaderCellDef class="fs-6 fst-italic"> <strong>Email</strong>
+                    </th>
+                    <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+                </ng-container>
+                <ng-container matColumnDef="action">
+                    <th mat-header-cell *matHeaderCellDef class="fs-6 fst-italic"> <strong>Action</strong></th>
+                    <td mat-cell *matCellDef="let element">
+                        <button type="button" class="btn btn-danger" 
+                        *ngIf="title == appSettings.TITLE_CURRENT_STAFF"
+                        (click)="removeStaffFormProject(element.id)"
+                        > REMOVE </button>
+                        <button type="button" class="btn btn-success" 
+                        *ngIf="title == appSettings.TITLE_AVAILABLE_STAFF"
+                        (click)="addStaffToProject(element.id)"
+                        > ADD </button>
+                    </td>
+                </ng-container>
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            </table>
+            <mat-paginator [pageSizeOptions]="[5,10,20]" showFirstLastButtons>
+            </mat-paginator>
+        </div>
+        <!-- END STAFFS IN PROJECT TABLE -->
+    </div>
+    </div>
+    <!-----------------------------END ADD STAFF TO PROJECT FORM--------------------------->
     <div mat-dialog-actions class="d-flex justify-content-between">
         <app-button (onClick)="cancelFunc($event)" [label]=appSettings.BUTTON_CANCEL></app-button>
         <app-button (onClick)="okFunc($event)" [label]=appSettings.BUTTON_OK></app-button>
