--- a/CRM-Update-Final-Project-FE/src/app/layouts/header/header.component.html
+++ b/CRM-Update-Final-Project-FE/src/app/layouts/header/header.component.html
@@ -36,7 +36,7 @@
                 </a>
                 <ul class="dropdown-menu dropdown-menu-end">
                     <li>
-                        <a class="dropdown-item" href="#">
+                        <a class="dropdown-item">
                             <div class="d-flex">
                                 <div class="flex-shrink-0 me-3">
                                     <div class="avatar avatar-online">
@@ -49,8 +49,8 @@
                                     </div>
                                 </div>
                                 <div class="flex-grow-1">
-                                    <span class="fw-semibold d-block">John Doe</span>
-                                    <small class="text-muted">Admin</small>
+                                    <span class="fw-semibold d-block">{{firstName}} {{lastName}}</span>
+                                    <small class="text-muted">{{roles}}</small>
                                 </div>
                             </div>
                         </a>
@@ -65,7 +65,7 @@
                         </a>
                     </li>
                     <li>
-                        <a class="dropdown-item" href="#">
+                        <a class="dropdown-item">
                         <span class="d-flex align-items-center align-middle">
                           <em class="flex-shrink-0 bx bxs-notification me-2"></em>
                           <span class="flex-grow-1 align-middle">Notification</span>
