--- a/CRM-Update-Final-Project-FE/src/app/share/components/dialog-form/dialog-form.component.html
+++ b/CRM-Update-Final-Project-FE/src/app/share/components/dialog-form/dialog-form.component.html
@@ -228,8 +228,7 @@
     </div>
     <!-- END USER COMMENT -->
     <!-------------------------------END COMMENT FORM-------------------------------------->
-    <!-----------------------------START ADD STAFF TO PROJECT FORM------------------------->
-
+    <!-----------------------------START MANAGE STAFF IN PROJECT DIALOG------------------------->
     <div *ngIf="type == appSettings.TYPE_MANAGE_STAFF_IN_PROJECT">
         <!-- START PROJECT INFO -->
         <button type="button" class="btn btn-info" 
@@ -266,7 +265,6 @@
                         <img *ngIf="element.avatar == null && element.gender == 'FEMALE'"
                              src="/assets/img/avatars/female-default.png" width="50" height="50" alt="">
                         <img *ngIf="element.avatar != null" [src]="element.avatar" width="50" height="50" alt="">
-                        {{element.gender}} 
                     </td>
                 </ng-container>
                 <ng-container matColumnDef="username">
@@ -278,6 +276,11 @@
                     <th mat-sort-header mat-header-cell *matHeaderCellDef class="fs-6 fst-italic"> <strong>Email</strong>
                     </th>
                     <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+                </ng-container>
+                <ng-container matColumnDef="projects">
+                    <th mat-sort-header mat-header-cell *matHeaderCellDef class="fs-6 fst-italic"> <strong>Projects</strong>
+                    </th>
+                    <td mat-cell *matCellDef="let element"> {{element.projects.length}} </td>
                 </ng-container>
                 <ng-container matColumnDef="action">
                     <th mat-header-cell *matHeaderCellDef class="fs-6 fst-italic"> <strong>Action</strong></th>
@@ -301,7 +304,30 @@
         <!-- END STAFFS IN PROJECT TABLE -->
     </div>
     </div>
-    <!-----------------------------END ADD STAFF TO PROJECT FORM--------------------------->
+    <!-----------------------------END MANAGE STAFF IN PROJECT DIALOG--------------------------->
+    <!-----------------------------START MANAGE ROLE IN STAFF DIALOG------------------------->
+    <div mat-dialog-content *ngIf="type == appSettings.TYPE_MANAGE_ROLE">
+        <div>Username:</div>
+        <div>
+            <img *ngIf="staff.avatar == null && staff.gender == 'MALE'"
+                src="/assets/img/avatars/male-default.png" width="50" height="50" alt="">
+            <img *ngIf="staff.avatar == null && staff.gender == 'FEMALE'"
+                src="/assets/img/avatars/female-default.png" width="50" height="50" alt="">
+            <img *ngIf="staff.avatar != null" [src]="staff.avatar" width="50" height="50" alt="">
+            {{staff.username}}
+        </div>
+        <div>First Name:</div>
+        <div>{{staff.firstName}}</div>
+        <div>Last Name:</div>
+        <div>{{staff.lastName}}</div>
+        <div>Roles:</div>
+        <div *ngFor="let role of roleData">
+            <section>
+                <mat-checkbox formControlName="{{role.id}}">{{role.name}}</mat-checkbox>
+            </section>
+        </div>
+    </div>
+    <!-----------------------------END MANAGE ROLE IN PROJECT DIALOG------------------------->
     <div mat-dialog-actions class="d-flex justify-content-between">
         <app-button (onClick)="cancelFunc($event)" [label]=appSettings.BUTTON_CANCEL></app-button>
         <app-button (onClick)="okFunc($event)" [label]=appSettings.BUTTON_OK></app-button>
