--- a/CRM-Update-Final-Project-FE/src/app/share/components/dialog-form/dialog-form.component.html
+++ b/CRM-Update-Final-Project-FE/src/app/share/components/dialog-form/dialog-form.component.html
@@ -163,7 +163,7 @@
         <div class="card card-body">
             <div>TASK NAME: {{element.name}}</div>
             <div>REPORTER: {{element.reporterUsername}} </div>
-        <div class="card card-body"> 
+        <div class="card card-body">
             <div *ngFor="let element of commentDisplayed">
                 <div *ngIf="element.comment.responseToId == null">
                     <img *ngIf="element.comment.writer.avatar == null && element.comment.writer.gender == 'MALE'"
@@ -231,12 +231,12 @@
     <!-----------------------------START MANAGE STAFF IN PROJECT DIALOG------------------------->
     <div *ngIf="type == appSettings.TYPE_MANAGE_STAFF_IN_PROJECT">
         <!-- START PROJECT INFO -->
-        <button type="button" class="btn btn-info" 
+        <button type="button" class="btn btn-info"
         [disabled]="title == appSettings.TITLE_CURRENT_STAFF"
         (click)="toRemoveStaffFromProjectTable()"
         > CURRENT STAFFS </button>
         &nbsp;
-        <button type="button" class="btn btn-primary" 
+        <button type="button" class="btn btn-primary"
         [disabled]="title == appSettings.TITLE_AVAILABLE_STAFF"
         (click)="toAddStaffToProjectTable()"
         > AVAILABLE STAFFS </button>
@@ -248,7 +248,7 @@
         </div>
         <!-- END PROJECT INFO -->
         <!-- START STAFFS IN PROJECT TABLE -->
-    
+
         <div class="card">
             <div class="card-body">
             <mat-form-field>
@@ -285,11 +285,11 @@
                 <ng-container matColumnDef="action">
                     <th mat-header-cell *matHeaderCellDef class="fs-6 fst-italic"> <strong>Action</strong></th>
                     <td mat-cell *matCellDef="let element">
-                        <button type="button" class="btn btn-danger" 
+                        <button type="button" class="btn btn-danger"
                         *ngIf="title == appSettings.TITLE_CURRENT_STAFF"
                         (click)="removeStaffFormProject(element.id)"
                         > REMOVE </button>
-                        <button type="button" class="btn btn-success" 
+                        <button type="button" class="btn btn-success"
                         *ngIf="title == appSettings.TITLE_AVAILABLE_STAFF"
                         (click)="addStaffToProject(element.id)"
                         > ADD </button>
@@ -323,7 +323,7 @@
         <div>Roles:</div>
         <div *ngFor="let role of roleData">
             <section>
-                <mat-checkbox formControlName="{{role.id}}">{{role.name}}</mat-checkbox>
+                <mat-checkbox (change)="change($event.checked, role.code)" formControlName="{{role.id}}">{{role.name}}</mat-checkbox>
             </section>
         </div>
     </div>
