--- a/CRM-Update-Final-Project-FE/src/app/pages/components/task/task.component.html
+++ b/CRM-Update-Final-Project-FE/src/app/pages/components/task/task.component.html
@@ -97,7 +97,7 @@
                             <ng-container matColumnDef="projectName">
                                 <th mat-sort-header mat-header-cell *matHeaderCellDef class="fs-6 fst-italic"><strong>Project</strong>
                                 </th>
-                                <td mat-cell *matCellDef="let element"> {{element.projectName}} </td>
+                                <td mat-cell *matCellDef="let element"> {{element.project.name}} </td>
                             </ng-container>
                             <ng-container matColumnDef="status">
                                 <th mat-sort-header mat-header-cell *matHeaderCellDef class="fs-6 fst-italic"> <strong>Status</strong>
