--- a/CRM-Update-Final-Project-FE/src/app/pages/components/project/project.component.html
+++ b/CRM-Update-Final-Project-FE/src/app/pages/components/project/project.component.html
@@ -60,7 +60,8 @@
                     </div>
                     <div class="col-md-6 p-0">
                         <div class="form-group mb-0 me-0"></div>
-                        <button class="btn btn-primary" (click)="addProject()">
+                        <button class="btn btn-primary" (click)="addProject()" *ngIf="appSettings.USER_ROLES.includes('ADMIN') 
+                        || appSettings.USER_ROLES.includes('MANAGER')">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                  fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                                  stroke-linejoin="round" class="feather feather-plus-square">
@@ -111,7 +112,8 @@
                                     <span *ngIf="element.status == 'DONE'" class="badge bg-label-success me-1">{{element.status}} </span>
                                 </td>
                             </ng-container>
-                            <ng-container matColumnDef="action">
+                            <ng-container matColumnDef="action" *ngIf="appSettings.USER_ROLES.includes('ADMIN') 
+                            || appSettings.USER_ROLES.includes('MANAGER')">
                                 <th mat-header-cell *matHeaderCellDef class="fs-6 fst-italic"> <strong>Action</strong></th>
                                 <td mat-cell *matCellDef="let element">
                                     <div class="dropdown">
