--- a/CRM-Update-Final-Project-FE/src/app/pages/components/project/project.component.html
+++ b/CRM-Update-Final-Project-FE/src/app/pages/components/project/project.component.html
@@ -96,7 +96,7 @@
                             </ng-container>
                             <ng-container matColumnDef="name">
                                 <th mat-sort-header mat-header-cell *matHeaderCellDef class="fs-6 fst-italic"><strong>Name</strong></th>
-                                <td mat-cell *matCellDef="let element">{{element.name}}</td>
+                                <td mat-cell *matCellDef="let element" (click)="showProjectDetail(element)" class="pointer">{{element.name}}</td>
                             </ng-container>
                             <ng-container matColumnDef="description">
                                 <th mat-sort-header mat-header-cell *matHeaderCellDef class="fs-6 fst-italic">
