--- a/CRM-Update-Final-Project-FE/src/app/pages/components/task/task.component.html
+++ b/CRM-Update-Final-Project-FE/src/app/pages/components/task/task.component.html
@@ -92,7 +92,7 @@
                         <table mat-table matSort [dataSource]="dataSource" class="mat-elevation-z8">
                             <ng-container matColumnDef="name">
                                 <th mat-sort-header mat-header-cell *matHeaderCellDef class="fs-6 fst-italic"> <strong>Name</strong></th>
-                                <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+                                <td mat-cell *matCellDef="let element" class="pointer" (click)="taskDetail(element)"> {{element.name}} </td>
                             </ng-container>
                             <ng-container matColumnDef="projectName">
                                 <th mat-sort-header mat-header-cell *matHeaderCellDef class="fs-6 fst-italic"><strong>Project</strong>
