--- a/CRM-Update-Final-Project-FE/src/app/share/components/dialog-form/dialog-form.component.html
+++ b/CRM-Update-Final-Project-FE/src/app/share/components/dialog-form/dialog-form.component.html
@@ -3,9 +3,10 @@
 </h1>
 <form [formGroup]="form">
 
-    <!---------------------------------PROJECT FORM-------------------------------------->
-
-    <div mat-dialog-content *ngIf="type == appSettings.TYPE_PROJECT">
+    <!---------------------------------START PROJECT-------------------------------------->
+    <!-- START ADD PROJECT && UPDATE PROJECT -->
+    <div mat-dialog-content *ngIf="type == appSettings.TYPE_PROJECT && 
+        title == appSettings.TITLE_ADD_PROJECT || title == appSettings.TITLE_UPDATE_PROJECT">
         <mat-form-field class="form-group">
             <mat-label>Name</mat-label>
             <input matInput placeholder="Name" class="form-control" formControlName="name">
@@ -22,7 +23,7 @@
         </mat-form-field>
         <mat-form-field class="form-group">
             <mat-label>Creator</mat-label>
-            <input matInput placeholder="Creator's name" class="form-control" formControlName="creatorUsername" [disabled]="data.title == appSettings.FORM_UPDATE_PROJECT">
+            <input matInput placeholder="Creator's name" class="form-control" formControlName="creatorUsername" [disabled]="data.title == appSettings.TITLE_UPDATE_PROJECT">
         </mat-form-field>
         <mat-form-field class="form-group">
             <mat-label>Leader</mat-label>
@@ -43,16 +44,86 @@
             </mat-radio-button>
         </mat-radio-group>
     </div>
-    <!------------------------------END PROJECT FORM-------------------------------------->
+    <!-- END ADD PROJECT && UPDATE PROJECT -->
+    <!-- START PROJECT DETAIL -->
+    <div mat-dialog-content *ngIf="type == appSettings.TYPE_PROJECT && 
+        title == appSettings.TITLE_PROJECT_DETAIL">
+        <mat-form-field class="form-group">
+            <mat-label>Name</mat-label>
+            <input matInput placeholder="Name" class="form-control" formControlName="name">
+        </mat-form-field>
+        <mat-form-field class="form-group">
+            <mat-label>Description</mat-label>
+            <input matInput placeholder="Project's Name" class="form-control" formControlName="description">
+        </mat-form-field>
+        <mat-form-field class="form-group">
+            <mat-label>Status</mat-label>
+            <input matInput placeholder="Creator's name" class="form-control" formControlName="status">
+        </mat-form-field>
+        <mat-form-field class="form-group">
+            <mat-label>Creator</mat-label>
+            <input matInput placeholder="Creator's name" class="form-control" formControlName="creatorUsername">
+        </mat-form-field>
+        <mat-form-field class="form-group">
+            <mat-label>Leader</mat-label>
+            <input matInput placeholder="Creator's name" class="form-control" formControlName="leaderUsername">
+        </mat-form-field>
+        <h3>All Staffs inside this project:</h3>
+        <!-- START STAFFS IN PROJECT TABLE -->
+        <div class="card">
+            <div class="card-body">
+            <mat-form-field>
+                <mat-label>Search..?</mat-label>
+                <input matInput placeholder="By keyword" (keyup)="filterByKeyword($event)">
+            </mat-form-field>
+            <table mat-table matSort [dataSource]="dataSource" class="mat-elevation-z8">
+                <ng-container matColumnDef="hobbies">
+                    <th mat-sort-header mat-header-cell *matHeaderCellDef class="fs-6 fst-italic"> <strong>First Name</strong>
+                    </th>
+                    <td mat-cell *matCellDef="let element">
+                        <img *ngIf="element.avatar == null && element.gender == 'MALE'"
+                                src="/assets/img/avatars/male-default.png" width="50" height="50" alt="">
+                        <img *ngIf="element.avatar == null && element.gender == 'FEMALE'"
+                                src="/assets/img/avatars/female-default.png" width="50" height="50" alt="">
+                        <img *ngIf="element.avatar != null" [src]="element.avatar" width="50" height="50" alt="">
+                    </td>
+                </ng-container>
+                <ng-container matColumnDef="username">
+                    <th mat-sort-header mat-header-cell *matHeaderCellDef class="fs-6 fst-italic"> <strong>Username</strong>
+                    </th>
+                    <td mat-cell *matCellDef="let element"> {{element.username}} </td>
+                </ng-container>
+                <ng-container matColumnDef="email">
+                    <th mat-sort-header mat-header-cell *matHeaderCellDef class="fs-6 fst-italic"> <strong>Email</strong>
+                    </th>
+                    <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+                </ng-container>
+                <ng-container matColumnDef="projects">
+                    <th mat-sort-header mat-header-cell *matHeaderCellDef class="fs-6 fst-italic"> <strong>Projects</strong>
+                    </th>
+                    <td mat-cell *matCellDef="let element"> {{element.projects.length}} </td>
+                </ng-container>
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            </table>
+            <mat-paginator [pageSizeOptions]="[5,10,20]" showFirstLastButtons>
+            </mat-paginator>
+            </div>
+        </div>
+        <!-- END STAFFS IN PROJECT TABLE -->
+    </div>
+    <!-- END PROJECT DETAIL -->
+    <!---------------------------------END PROJECT-------------------------------------->
 
-    <!-------------------------------START STAFF FORM-------------------------------------->
-
-    <div mat-dialog-content *ngIf="type == appSettings.TYPE_STAFF">
+    <!----------------------------------START STAFF -------------------------------------->
+    <!-- START ADD && UPDATE STAFF -->
+    <div mat-dialog-content *ngIf="type == appSettings.TYPE_STAFF && 
+        title == appSettings.TITLE_ADD_STAFF || title == appSettings.TITLE_UPDATE_STAFF">
         <mat-form-field class="form-group">
             <mat-label>Username</mat-label>
             <input matInput placeholder="Username" class="form-control" formControlName="username">
         </mat-form-field>
-        <mat-form-field class="form-group" *ngIf="title == appSettings.FORM_ADD_STAFF">
+        <mat-form-field class="form-group" *ngIf="title == appSettings.TITLE_ADD_STAFF">
             <mat-label>Password</mat-label>
             <input matInput placeholder="Password" type="password" class="form-control" formControlName="password">
         </mat-form-field>
@@ -97,9 +168,96 @@
             </mat-select>
         </mat-form-field>
     </div>
-    <!-------------------------------END STAFF FORM-------------------------------------->
-    <!-------------------------------START TASK FORM-------------------------------------->
-    <div mat-dialog-content *ngIf="type == appSettings.TYPE_TASK">
+    <!-- END ADD && UPDATE STAFF -->
+
+    <!-- START STAFF DETAIL -->
+    <div mat-dialog-content *ngIf="type == appSettings.TYPE_STAFF && 
+        title == appSettings.TITLE_STAFF_DETAIL">
+        <div class="card-body">
+            <form [formGroup]="form">
+                <div class="row">
+                    <div class="mb-3 col-md-6">
+                        <mat-form-field class="form-group">
+                            <mat-label>Username</mat-label>
+                            <input matInput [disabled]="true" placeholder="Username" class="form-control"
+                                   formControlName="username">
+                        </mat-form-field>
+                    </div>
+                    <div class="mb-3 col-md-6">
+                        <mat-form-field class="form-group">
+                            <mat-label>First Name</mat-label>
+                            <input matInput placeholder="First Name" class="form-control"
+                                   formControlName="firstName">
+                        </mat-form-field>
+                    </div>
+                    <div class="mb-3 col-md-6">
+                        <mat-form-field class="form-group">
+                            <mat-label>Last Name</mat-label>
+                            <input matInput placeholder="Last Name" class="form-control"
+                                   formControlName="lastName">
+                        </mat-form-field>
+                    </div>
+                    <div class="mb-3 col-md-6">
+                        <mat-form-field class="form-group">
+                            <mat-label>Last Name</mat-label>
+                            <input matInput placeholder="Last Name" class="form-control"
+                                   formControlName="gender">
+                        </mat-form-field>
+                    </div>
+                    <div class="mb-3 col-md-6">
+                        <mat-form-field class="form-group">
+                            <mat-label>Email</mat-label>
+                            <input matInput placeholder="Email" class="form-control" formControlName="email"
+                                   type="email">
+                        </mat-form-field>
+                    </div>
+                    <div class="mb-3 col-md-6">
+                        <mat-form-field class="form-group">
+                            <mat-label>Facebook</mat-label>
+                            <input matInput placeholder="Facebook URL" class="form-control"
+                                   formControlName="facebookUrl">
+                        </mat-form-field>
+                    </div>
+                    <div class="mb-3 col-md-6">
+                        <mat-form-field class="form-group">
+                            <mat-label>Occupation</mat-label>
+                            <input matInput placeholder="Occupation" class="form-control"
+                                   formControlName="occupation">
+                        </mat-form-field>
+                    </div>
+                    <div class="mb-3 col-md-6">
+                        <mat-form-field class="form-group">
+                            <mat-label>Department</mat-label>
+                            <input matInput placeholder="Department" class="form-control"
+                                   formControlName="department">
+                        </mat-form-field>
+                    </div>
+                    <div class="mb-3 col-md-6">
+                        <mat-form-field class="form-group">
+                            <mat-label>Hobbies</mat-label>
+                            <input matInput placeholder="Hobbies" class="form-control"
+                                   formControlName="hobbies">
+                        </mat-form-field>
+                    </div>
+                    <div class="mb-3 col-md-6">
+                        <mat-form-field class="form-group">
+                            <mat-label>Account Status</mat-label>
+                            <input matInput placeholder="Account Status" class="form-control"
+                                   formControlName="accountStatus">
+                        </mat-form-field>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+    <!-- END STAFF DETAIL -->
+    <!----------------------------------END STAFF -------------------------------------->
+
+
+    <!----------------------------------START TASK-------------------------------------->
+    <!-- START ADD & UPDATE TASK -->
+    <div mat-dialog-content *ngIf="type == appSettings.TYPE_TASK && title == appSettings.TITLE_ADD_TASK ||
+        title == appSettings.TITLE_UPDATE_TASK">
         <mat-form-field class="form-group">
             <mat-label>Name</mat-label>
             <input matInput placeholder="Name" class="form-control" formControlName="name">
@@ -144,7 +302,8 @@
         </mat-form-field>
         <mat-form-field class="form-group" >
             <mat-label>Project Name</mat-label>
-            <mat-select class="form-control" (valueChange)="taskProjectNameChange($event)" [disabled]="data.title == appSettings.FORM_UPDATE_TASK" formControlName="projectName" disableOptionCentering panelClass="myPanelClass" [(value)]="compare2">
+            <mat-select class="form-control" (valueChange)="taskProjectNameChange($event)" [disabled]="data.title == appSettings.TITLE_UPDATE_TASK" 
+            formControlName="projectName" disableOptionCentering panelClass="myPanelClass" [(value)]="compare2">
                 <mat-option *ngFor="let project of projectData" [value]="project.name">{{project.name}}</mat-option>
             </mat-select>
         </mat-form-field>
@@ -155,6 +314,48 @@
             </mat-select>
         </mat-form-field>
     </div>
+    <!-- END ADD & UPDATE TASK -->
+    <div mat-dialog-content *ngIf="type == appSettings.TYPE_TASK && title == appSettings.TITLE_TASK_DETAIL">
+        <mat-form-field class="form-group">
+            <mat-label>Name</mat-label>
+            <input matInput placeholder="Name" class="form-control" formControlName="name">
+        </mat-form-field>
+        <mat-form-field class="form-group">
+            <mat-label>Description</mat-label>
+            <input matInput placeholder="Description" class="form-control" formControlName="description">
+        </mat-form-field>
+        <mat-form-field>
+            <mat-label>Start Date Expected</mat-label>
+            <input matInput placeholder="Start Date Expected" class="form-control" formControlName="startDateExpected">
+        </mat-form-field>
+        <mat-form-field>
+            <mat-label>End Date Expected</mat-label>
+            <input matInput placeholder="End Date Expected" class="form-control" formControlName="endDateExpected">
+        </mat-form-field>
+        <mat-form-field>
+            <mat-label>Start Date In Fact</mat-label>
+            <input matInput placeholder="Start Date In Fact" class="form-control" formControlName="startDateInFact">
+        </mat-form-field>
+        <mat-form-field>
+            <mat-label>End Date In Fact</mat-label>
+            <input matInput placeholder="End Date In Fact" class="form-control" formControlName="endDateInFact">
+        </mat-form-field>
+        <mat-form-field class="form-group">
+            <mat-label>Status</mat-label>
+            <input matInput placeholder="Status" class="form-control" formControlName="status">
+        </mat-form-field>
+        <mat-form-field class="form-group" >
+            <mat-label>Project Name</mat-label>
+            <input matInput placeholder="Project Name" class="form-control" formControlName="projectName">
+        </mat-form-field>
+        <mat-form-field class="form-group">
+            <mat-label>Reporter Username</mat-label>
+            <input matInput placeholder="Reporter Username" class="form-control" formControlName="reporterUsername">
+        </mat-form-field>
+    </div>
+    <!-- START TASK DETAIL -->
+
+    <!-- END TASK DETAIL -->
     <!-------------------------------END TASK FORM-------------------------------------->
     <!-------------------------------START COMMENT FORM-------------------------------------->
     <!-- START PREVIOUS COMMENTS -->
@@ -244,7 +445,7 @@
             Project: {{projectData.name}}
         </div>
         <div>
-            Leader: {{projectData.leaderUsername}}
+            Leader: {{projectData.leader.username}}
         </div>
         <!-- END PROJECT INFO -->
         <!-- START STAFFS IN PROJECT TABLE -->
@@ -300,9 +501,9 @@
             </table>
             <mat-paginator [pageSizeOptions]="[5,10,20]" showFirstLastButtons>
             </mat-paginator>
+            </div>
         </div>
         <!-- END STAFFS IN PROJECT TABLE -->
-    </div>
     </div>
     <!-----------------------------END MANAGE STAFF IN PROJECT DIALOG--------------------------->
     <!-----------------------------START MANAGE ROLE IN STAFF DIALOG------------------------->
